--- a/musicBBS/pom.xml
+++ b/musicBBS/pom.xml
@@ -121,6 +121,36 @@
 			<artifactId>commons-lang3</artifactId>
 			<version>3.7</version>
 		</dependency>
+		
+		<dependency>
+		<groupId>javax.servlet</groupId>
+		<artifactId>javax.servlet-api</artifactId>
+		<version>3.0.1</version>
+		<scope>provided</scope>
+		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/javax.servlet.jsp/jsp-api -->
+		<dependency>
+		    <groupId>javax.servlet.jsp</groupId>
+		    <artifactId>jsp-api</artifactId>
+		    <version>2.2.1-b03</version>
+		    <scope>provided</scope>
+		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/com.github.pagehelper/pagehelper -->
+		<dependency>
+		    <groupId>com.github.pagehelper</groupId>
+		    <artifactId>pagehelper</artifactId>
+		    <version>5.0.1</version>
+		</dependency>
+
+	    <dependency>
+		     <groupId>com.github.jsqlparser</groupId>
+		     <artifactId>jsqlparser</artifactId>
+		     <version>0.9.5</version>
+	    </dependency>
+
+		
 	</dependencies>
   
 </project>
