--- a/musicBBS/pom.xml
+++ b/musicBBS/pom.xml
@@ -149,6 +149,14 @@
 		     <artifactId>jsqlparser</artifactId>
 		     <version>0.9.5</version>
 	    </dependency>
+	    
+	    <!-- https://mvnrepository.com/artifact/commons-logging/commons-logging -->
+		<dependency>
+		    <groupId>commons-logging</groupId>
+		    <artifactId>commons-logging</artifactId>
+		    <version>1.1.1</version>
+		</dependency>
+	    
 
 		
 	</dependencies>
