--- a/musicBBS/pom.xml
+++ b/musicBBS/pom.xml
@@ -6,7 +6,7 @@
   <packaging>war</packaging>
   
   <dependencies>
-		<!-- Servlet API -->
+<!-- 		Servlet API -->
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>servlet-api</artifactId>
@@ -79,19 +79,14 @@
 		</dependency>
 
 		<!-- JSTL -->
-		<!-- https://mvnrepository.com/artifact/jstl/jstl -->
+		<!-- https://mvnrepository.com/artifact/jstl/jstl --> 
 		<dependency>
 			<groupId>jstl</groupId>
 			<artifactId>jstl</artifactId>
 			<version>1.2</version>
 		</dependency>
 
-		<!-- https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple -->
-		<dependency>
-			<groupId>com.googlecode.json-simple</groupId>
-			<artifactId>json-simple</artifactId>
-			<version>1.1</version>
-		</dependency>
+		
 
 		<!-- https://mvnrepository.com/artifact/commons-fileupload/commons-fileupload -->
 		<dependency>
@@ -122,12 +117,12 @@
 			<version>3.7</version>
 		</dependency>
 		
-		<dependency>
-		<groupId>javax.servlet</groupId>
-		<artifactId>javax.servlet-api</artifactId>
-		<version>3.0.1</version>
-		<scope>provided</scope>
-		</dependency>
+<!-- 		<dependency> -->
+<!-- 		<groupId>javax.servlet</groupId> -->
+<!-- 		<artifactId>javax.servlet-api</artifactId> -->
+<!-- 		<version>3.0.1</version> -->
+<!-- 		<scope>provided</scope> -->
+<!-- 		</dependency> -->
 		
 		<!-- https://mvnrepository.com/artifact/javax.servlet.jsp/jsp-api -->
 		<dependency>
@@ -156,8 +151,6 @@
 		    <artifactId>commons-logging</artifactId>
 		    <version>1.1.1</version>
 		</dependency>
-	    
-
 		
 	</dependencies>
   
