--- a/musicBBS/pom.xml
+++ b/musicBBS/pom.xml
@@ -151,6 +151,12 @@
 		    <artifactId>commons-logging</artifactId>
 		    <version>1.1.1</version>
 		</dependency>
+       <!-- 读取MP3文件信息 -->
+		<dependency>
+            <groupId>org</groupId>
+            <artifactId>jaudiotagger</artifactId>
+            <version>2.0.3</version>
+        </dependency>
 		
 	</dependencies>
   
