--- a/musicBBS/pom.xml
+++ b/musicBBS/pom.xml
@@ -117,6 +117,7 @@
 			<version>3.7</version>
 		</dependency>
 		
+		
 <!-- 		<dependency> -->
 <!-- 		<groupId>javax.servlet</groupId> -->
 <!-- 		<artifactId>javax.servlet-api</artifactId> -->
@@ -157,6 +158,25 @@
             <artifactId>jaudiotagger</artifactId>
             <version>2.0.3</version>
         </dependency>
+        
+        <!-- https://mvnrepository.com/artifact/commons-httpclient/commons-httpclient -->
+		<dependency>
+		    <groupId>commons-httpclient</groupId>
+		    <artifactId>commons-httpclient</artifactId>
+		    <version>3.0-rc4</version>
+		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/dom4j/dom4j -->
+		<dependency>
+		    <groupId>dom4j</groupId>
+		    <artifactId>dom4j</artifactId>
+		    <version>1.6.1</version>
+		</dependency>
+		
+        
+     
+       
+          
 		
 	</dependencies>
   
